fix(instector): fix height in main and sidebar for showing the scrollbars

--- a/src/devtools/components/Inspector/inspector.less
+++ b/src/devtools/components/Inspector/inspector.less
@@ -116,6 +116,7 @@
   .inspector-sidebar {
     flex: none;
     width: 200px;
+    height: 100vh;
     overflow: scroll;
     border-right: 1px solid #ddd;
 
@@ -155,7 +156,7 @@
   }
 
   .inspector-main {
-    height: 100%;
+    height: 100vh;
     flex: 1;
     overflow: scroll;
     font-size: 12px;
